<resources>
    <string name="app_name">Note</string>
    <string name="app_title">Заметки</string>
    <string name="create_new_note">Новая заметка</string>
    <string name="title">Заголовок</string>
    <string name="tap_to_add_text">Начните вводить текст</string>
    <string name="save">Сохранить</string>
    <string name="change_view">Изменить вид</string>
    <string name="delete">Удалить</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Найти</string>
    <string name="field_cannot_be_empty">Поле не может быть пустое!</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="select_color">Выберите цвет</string>
    <string name="add_image">Добавить картинку</string>
    <string name="changed">Изменено</string>
    <string name="selected">Выбрано:</string>
    <string name="editing">Изменить</string>
    <string name="sort">Сортировка</string>
    <string name="by_title">По заголовке</string>
    <string name="ascending">По возрастанию</string>
    <string name="descending">По убыванию</string>
    <string name="by_date">По дате</string>
    <string name="add_audio">Добавить аудио</string>
    <string name="favorites">Избранное</string>
</resources>