<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/viewType"
        android:icon="@drawable/baseline_grid_view_24"
        android:title="@string/change_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        app:showAsAction="always"
        android:icon="@drawable/round_sort_24">
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/by_title">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/sort_by_name_asc"
                            android:title="@string/ascending" />
                        <item
                            android:id="@+id/sort_by_name_desc"
                            android:title="@string/descending" />
                    </group>
                </menu>
            </item>

            <item
                android:id="@+id/sort_by_created_at"
                android:title="@string/by_date"
                app:showAsAction="never">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/sort_by_created_at_asc"
                            android:title="@string/ascending" />
                        <item
                            android:id="@+id/sort_by_created_at_desc"
                            android:title="@string/descending" />
                    </group>
                </menu>
            </item>

        </menu>

    </item>


</menu>