<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortGroup"
        tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:layout_editor_absoluteX="-19dp"
        tools:listitem="@layout/note_item_linear"
        tools:spanCount="2" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationEmptyNotes"
        android:visibility="gone"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/empty_list_animation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/create_new_note"
        android:focusable="true"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/rvNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_24"
        app:tint="@color/white" />

    <RadioGroup
        android:id="@+id/sortGroup"
        android:layout_width="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/by_title"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/sortByTitleAsc"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/sortByTitleDesc"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/descending" />

        <TextView
            android:layout_marginStart="8dp"
            android:text="@string/by_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/sortByDateAsc"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/sortByDateDesc"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/descending" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>