<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:justifyContent="space_between"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/color_shape_red" />

        <View
            android:id="@+id/orange"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/color_shape_orange" />

        <View
            android:id="@+id/yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/color_shape_yellow" />

        <View
            android:id="@+id/cyan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/color_shape_cyan" />

        <View
            android:id="@+id/pink"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/color_shape_pink" />

    </com.google.android.flexbox.FlexboxLayout>

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/title"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/et_text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/colors"
        app:layout_constraintStart_toStartOf="@id/colors"
        app:layout_constraintTop_toBottomOf="@+id/colors"
        tools:text="Title" />

    <EditText
        android:id="@+id/etNoteText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/tap_to_add_text"
        android:inputType="textMultiLine"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollHorizontally="false"
        android:textColorHint="@color/et_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Tap to add text" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:focusable="true"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_done_24"
        app:tint="@color/white" />



</androidx.constraintlayout.widget.ConstraintLayout>